# SpellChecker

./: .gitignore  CMakeLists.txt  README.md  SpellChecker.pro  main.cpp
Dict/: dictionary.cpp  dictionary.h  simplehashdict.cpp  simplehashdict.h  simplemapdict.cpp  simplemapdict.h
DictChecker/: basesimpledictchecker.cpp  basesimpledictchecker.h  dictchecker.cpp  dictchecker.h  simpledictchecker.cpp  simpledictchecker.h  simpledictionarynonearedits.cpp  simpledictionarynonearedits.h
IOModul/: iomodul.cpp  iomodul.h
Parser/: parser.cpp  parser.h  simpleparser.cpp  simpleparser.h
SpellChecker/: spellchecker.cpp  spellchecker.h
Utils/: dictutils.cpp  dictutils.h
